[package]
name = "rust-abci"
version = "0.1.0"
authors = ["Adrian Brink <adrian@brink-holdings.com>"]
license = "MIT/Apache-2.0"
description = "An implementation of the ABCI protocol used by Tendermint Core. Allows the building of ABCI apps in Rust."
homepage = "https://tendermint.com/docs/guides/app-development"
repository = "https://github.com/tendermint/rust-abci"
documentation = "https://docs.rs/rust-abci/0.1.0/rust_abci/"
keywords = ["abci", "tendermint", "cosmos", "blockchain", "proof-of-stake"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
byteorder       = "1.0"
futures-cpupool = "0.1"
grpc            = "0.*"
protobuf        = "1.*"
tls-api         = "0.*"

bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"